--- a/TODO
+++ b/TODO
@@ -8,3 +8,4 @@ TODO
   aircraft ICAO address, like: 30xxxx -> Italy.
 * Actually use the fancy --debug feature in order to improve the recognition
   algorithm if possibile.
+* Fix latitude calculation (looks like it's off)
